@@ -22,6 +22,7 @@ version ? (????-??-??):
     (lukasz)
   - boosted download of database backup files. We don't need viewer in LMS, because
     it's USELESS (chilek)
+  - added indexes on nodes.ownerid and nodes.ipaddr_pub (alec)
 
 version 1.9.4 Mot (2006-12-30):
 
